RESOLVED FIXED273983
Fix some unified sources issues, mainly in PDF code
https://bugs.webkit.org/show_bug.cgi?id=273983
Summary Fix some unified sources issues, mainly in PDF code
Simon Fraser (smfr)
Reported 2024-05-09 16:59:57 PDT
Fix some unified sources issues, mainly in PDF code
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-09 17:00:20 PDT
Simon Fraser (smfr)
Comment 2 2024-05-09 17:27:05 PDT
EWS
Comment 3 2024-05-09 18:38:59 PDT
Committed 278598@main (8648d79fb455): <https://commits.webkit.org/278598@main> Reviewed commits have been landed. Closing PR #28375 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.