Fix some unified sources issues, mainly in PDF code https://bugs.webkit.org/show_bug.cgi?id=273983 rdar://127848229

Reviewed by Wenson Hsieh and Aditya Keerthi.

Fix some missing WebCore:: prefixes in PDFDataDetectorOverlayController.h and
remove some `using namespace WebCore` from headers.

* Source/WebKit/Platform/ios/PlaybackSessionInterfaceLMK.h:
* Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDataDetectorOverlayController.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDataDetectorOverlayController.mm:

Canonical link: https://commits.webkit.org/278598@main