Source/WebKit/Platform/ios/PlaybackSessionInterfaceLMK.h
@@ -35,8 +35,6 @@ OBJC_CLASS WKLinearMediaPlayerDelegate;
 
 namespace WebKit {
 
-using namespace WebCore;
-
 class PlaybackSessionInterfaceLMK final : public PlaybackSessionInterfaceIOS {
     WTF_MAKE_FAST_ALLOCATED;
     WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR(PlaybackSessionInterfaceLMK);
